# webcam-react-native-electron-ios-android

./: .gitignore  Electron-build.md  README.md  RUN_PROJECT.md  install-production.md
desktop/: PRODUCTION_MACOS.md  forge.config.ts  index.html  package-lock.json  package.json
desktop/scripts/: package-macos-installer.sh  stage-macos-native.sh
desktop/src/: index.css  macosVirtualCam.ts  main.ts  preload.ts  renderer.d.ts  renderer.ts  signaling.ts  virtualcam.ts
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/patches/: react-native-webrtc+124.0.7.patch
obs-plugin/: README.md
obs-plugin/electron_bridge_source/: CMakeLists.txt  README.md
obs-plugin/electron_bridge_source/src/: plugin.cpp
virtualcam/: GETTING_STARTED.md  README.md
virtualcam/linux/: README.md  setup-v4l2loopback.sh  start-electron-virtualcam.sh  stop-electron-virtualcam.sh
virtualcam/macos/: BUILD_CAMERA_EXTENSION.md  README.md
virtualcam/macos/BridgeDaemon/: Package.swift  README.md
virtualcam/macos/CameraExtensionSkeleton/: CameraFrameBridge.swift
virtualcam/macos/ElectronVirtualCameraHost/ElectronVirtualCameraHost/: ContentView.swift  ElectronVirtualCameraHostApp.swift
virtualcam/macos/ElectronVirtualCameraHost/ElectronVirtualCameraHost.xcodeproj/: project.pbxproj
virtualcam/macos/XcodeTemplate/: README.md
virtualcam/protocol/: FRAME_PROTOCOL.md
virtualcam/windows/: README.md
virtualcam/windows/BridgeDaemon/: CMakeLists.txt  README.md  main.cpp
virtualcam/windows/VirtualCamSkeleton/: FrameBridge.h  NamedPipeFrameBridge.cpp  VirtualCameraSource.cpp
(+10 files in other folders)
